; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_sb.c_scrub_from_sb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_sb.c_scrub_from_sb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@sb_to_scrub = common dso_local global %struct.TYPE_2__* null, align 8
@scrub_position = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @scrub_from_sb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scrub_from_sb(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sb_to_scrub, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @scrub_position, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sb_to_scrub, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = sub nsw i32 %9, %12
  %14 = sub nsw i32 %8, %13
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp sgt i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %18, %2
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* @scrub_position, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @memcpy(i8* %21, i32 %22, i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @scrub_position, align 4
  %27 = add nsw i32 %26, %25
  store i32 %27, i32* @scrub_position, align 4
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
